# Dispersion-Trading-Project

./: .env.example  .gitignore  LICENSE  METHODOLOGY.md  README.md  appendix.tex  main.py  methodology.md  plan.md  pyproject.toml  ~$Presentation_Slides.ppt.pptx
docs/: 2026_Project_Pitch.pptx
exploration_notebooks/: 01_explore_vsurfd.ipynb  02_explore_crsp.ipynb  03_implied_correlation.ipynb  04_explore_premiums.ipynb  05_explore_costs.ipynb  06_backtest_results.ipynb  07_explore_spectrum.ipynb  08_feature_selection.ipynb  09_ml_results.ipynb  10_robustness.ipynb  11_mfiv_robustness.ipynb
notebooks/: 03_implied_correlation.ipynb
results/tables/: table_central_test.csv  table_feature_importance.csv  table_mfiv_bias.csv  table_ml_metrics.csv  table_parsimonious.csv  table_premium_subperiods.csv  table_s3_dmv_sanity.csv  table_s3_metrics.csv  table_sensitivity.csv  table_strategy_subperiods_sharpe.csv
src/dispersion/backtest/: engine.py  marking.py
src/dispersion/data/: assemble.py  iv.py  returns.py  spots.py  universe.py  wrds_client.py
src/dispersion/ml/: experiments.py  features.py  metamodel.py  regime.py
src/dispersion/rmt/: cleaning.py  daily.py
src/dispersion/signal/: implied_corr.py
src/dispersion/utils/: greeks.py
tests/: test_engine.py  test_greeks.py  test_marking.py  test_regime.py  test_rmt.py
