[project]
name = "dispersion-trading"
version = "1.0.0"
description = "ML-Driven Dispersion Trading on the S&P 500 — Imperial College Applied Project"
requires-python = ">=3.12,<3.13"
dependencies = [
    # --- Data access ---
    "wrds>=3.3.0",
    "pyarrow>=16.0.0",        # parquet IO
    # --- Core scientific stack ---
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    # --- Stats & ML ---
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "xgboost>=3.3.0",
    "hmmlearn>=0.3.3",
    # --- Viz ---
    "matplotlib>=3.9",
    # --- Notebooks ---
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    # --- Utils ---
    "python-dotenv>=1.0",     # WRDS credentials via .env
    "six>=1.17.0",            # required at import time by wrds
]

# NB: no [build-system] on purpose. The project lives under ~/Desktop where macOS TCC
# breaks uv's editable install (.pth files hit the com.apple.provenance xattr read by
# site/io.open_code at startup). `dispersion` is made importable via PYTHONPATH (.env).
[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.6",
    "black>=24.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]          # makes `uv run pytest` work without the .env PYTHONPATH
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
